--- a/src/client/styles/board.css
+++ b/src/client/styles/board.css
@@ -8,11 +8,12 @@
 	grid-template-rows: repeat(20, 1fr);
 	border: .5px solid #69f0ae99;
 	border-radius: 5px;
+	padding: 1px;
 }
 
 .cell {
 	position: relative;
-	border: 1px solid #222;
+	border: 1px solid #333;
 }
 
 .cell::before,
@@ -21,7 +22,7 @@
 	position: absolute;
 	width: 2px;
 	height: 56px;
-	background: #222;
+	background: #333;
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%) rotate(45deg);
