added next piece preview

--- a/src/client/styles/board.css
+++ b/src/client/styles/board.css
@@ -2,6 +2,8 @@
 	background: #333;
 	width: 400px;
 	height: 800px;
+	max-width: 40vw;
+	max-height: 80vw;
 	margin: 10rem auto;
 	display: grid;
 	grid-template-columns: repeat(10, 1fr);
@@ -9,6 +11,23 @@
 	border: .5px solid #69f0ae99;
 	border-radius: 5px;
 	padding: 1px;
+	position: relative;
+}
+
+.board__container,
+.next__container {
+	display: flex;
+}
+
+.next__container {
+	justify-content: center;
+	width: calc(160px + 4rem);
+	min-width: calc(16vw + 4rem);
+}
+
+.next {
+	display: grid;
+	margin: 12rem 2rem;
 }
 
 .cell {
@@ -20,8 +39,8 @@
 .cell::after {
 	content: '';
 	position: absolute;
-	width: 2px;
-	height: 56px;
+	width: 5%;
+	height: 140%;
 	background: #333;
 	top: 50%;
 	left: 50%;
@@ -30,4 +49,14 @@
 
 .cell::before {
 	transform: translate(-50%, -50%) rotate(-45deg);
+}
+
+.player__name.MuiTypography-h4 {
+	position: absolute;
+	left: 50%;
+	top: max(-4vw, -2.5rem);
+	transform: translate(-50%, -50%);
+	text-transform: uppercase;
+	color: #69f0ae80;
+	font-size: min(2.5rem, 3vw);
 }
