--- a/src/client/styles/lobby.css
+++ b/src/client/styles/lobby.css
@@ -20,10 +20,6 @@
 	color: #69f0ae90;
 }
 
-.gameList.actions {
-	margin-left: auto;
-}
-
 .gameList.actions > .gameList.btn {
 	margin: 0 .5rem;
 }
@@ -32,6 +28,21 @@
 	margin-top: 2rem;
 	margin-bottom: 2rem;
 	text-align: center;
+}
+
+.gameList.item {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.gameList.chip {
+	opacity: .7;
+	margin: 0 2rem;
+}
+
+.MuiListItem-root {
+	justify-content: space-between !important;
 }
 
 .MuiButton-root {
